human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_7.wast
(assert_invalid
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
  "type mismatch"
)